--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -7,7 +7,6 @@ on:
     branches:
       - main
 
-
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -19,10 +18,12 @@ jobs:
         run: |
           pip install requests
           python Run.py
+          du -sh
 
       - name: Set variables
         run: |
           echo "BUILDTIME=$(TZ=Asia/Shanghai date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
+          echo "BTIME=$(TZ=Asia/Shanghai date +'%Y%m%d%H%M')" >> $GITHUB_ENV
         shell: bash
   
          # 添加commit 防止workflows停止
@@ -36,13 +37,13 @@ jobs:
           git remote set-url origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git push -f -u origin main
 
-      - name: Upload to Releases
-        uses: ncipollo/release-action@main
-        if: ${{ steps.upload.outputs.status }} == 'success' && !cancelled()
+      - name: Create and Upload Release
+        id: upload_release
+        uses: svenstaro/upload-release-action@v2
         with:
-          tag: ${{ steps.timestamp.outputs.current_time }}
-          artifacts: docs/*
-          allowUpdates: true
-          removeArtifacts: false
-          replacesArtifacts: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          release_name: Release ${{ env.BUILDTIME }}
+          tag: v${{ env.BTIME }}
+          file_glob: true
+          overwrite: true
+          file: ./docs/*
