--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,10 +2,10 @@ name: zeal_docs
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 4 */7 * *"
-  push:
-    branches:
-      - main
+    - cron: "0 4 */10 * *"
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   run:
@@ -23,27 +23,53 @@ jobs:
       - name: Set variables
         run: |
           echo "BUILDTIME=$(TZ=Asia/Shanghai date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
-          echo "BTIME=$(TZ=Asia/Shanghai date +'%Y%m%d%H%M')" >> $GITHUB_ENV
+          echo "BTIME=$(TZ=Asia/Shanghai date +'%Y%m%d')" >> $GITHUB_ENV
         shell: bash
   
          # 添加commit 防止workflows停止
-      - name: push rep
-        run: |
-          echo ${{ env.BUILDTIME }} >> commit
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "triggle by commit ${{ env.BUILDTIME }}"
-          git remote set-url origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-          git push -f -u origin main
+      # - name: push rep
+      #   run: |
+      #     echo ${{ env.BUILDTIME }} > commit
+      #     git config --local user.name "github-actions[bot]"
+      #     git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      #     git add .
+      #     git commit -m "triggle by commit ${{ env.BUILDTIME }}"
+      #     git remote set-url origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+      #     git push -f -u origin main
 
-      - name: Create and Upload Release
-        id: upload_release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          release_name: Release ${{ env.BUILDTIME }}
-          tag: v${{ env.BTIME }}
-          file_glob: true
-          overwrite: true
-          file: ./docs/*
+      # - name: Create and Upload Release
+      #   id: upload_release
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     release_name: Release ${{ env.BUILDTIME }}
+      #     tag: v${{ env.BTIME }}
+      #     file_glob: true
+      #     overwrite: true
+      #     file: ./docs/*
+
+      # 安装 rclone
+      - name: Install rclone
+        run: |
+          curl -O https://downloads.rclone.org/rclone-current-linux-amd64.zip
+          unzip rclone-current-linux-amd64.zip
+          sudo mv rclone-*-linux-amd64/rclone /usr/bin/
+          rm rclone-current-linux-amd64.zip
+          rm -rf rclone-*-linux-amd64
+          rclone version
+
+      # 配置 rclone
+      - name: Setup rclone config
+        env:
+          RCLONE_CONFIG_BASE64: ${{ secrets.RCLONE_CONFIG }}
+        run: |
+          echo "$RCLONE_CONFIG_BASE64" | base64 -d > ~/.config/rclone/rclone.conf
+          chmod 600 ~/.config/rclone/rclone.conf
+
+      # 上传文件到 OneDrive
+      - name: Upload files to OneDrive
+        run: |
+          rclone copy ./docs gh_bk:/backup_repos/${{ env.BTIME }} -P
+          rclone copy *.py gh_bk:/backup_repos/${{ env.BTIME }} -P
+          rclone copy .github gh_bk:/backup_repos/${{ env.BTIME }} -P
+          rm -rf ~/.config/rclone/rclone.conf
